Fix time to UTC

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -61,8 +61,8 @@
 </HTML>
 <script type="text/javascript" src="./js/moment.js"></script>
 <script>
-  //const moment = require('moment');
-  let m = moment();
+  // fill in start and end times
+  let m = moment.utc();
   var dformat='YYYY-MM-DD';
   var today = m.format(dformat);
   var current_time = m.format('HH:mm'); 
