addition of page to show pre-generated images; other updates

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -10,6 +10,11 @@
 <body>
 <section class='menu'>
 <h2>ffRSAM Viewer</h2>
+View all: &nbsp;&nbsp;
+<a href="./plots.php?days=1">Day</a>&nbsp;&nbsp;
+<a href="./plots.php?days=30">Month</a>&nbsp;&nbsp;
+<a href="./plots.php?days=365">Year</a>&nbsp;&nbsp;
+&vert; &nbsp;&nbsp;
 <a href="./help.pdf" target="_blank">View User Manual</a>
 <p>
 <form id='menu'>
