Add copy and open in new tab feature

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -9,7 +9,7 @@
 </HEAD>
 <body>
 <section class='menu'>
-<h2>ffRSAM Viewer</h2>
+<h2>RSAM Viewer</h2>
 <a href="./plots.php?days=1">View pre-generated plots<a>&nbsp;&nbsp;
 &vert; &nbsp;&nbsp;
 <a href="./help.pdf" target="_blank">View user manual</a>
