add 7 day plot link to home page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,10 +9,11 @@
 <body>
 <section>
 <h1>What is ffRSAM?</h1>
-The ffRSAM application allows users to view pregenerated RSAM plots for 1, 30, or 365 days.  There is also an interface to allow for customized queries, including plots for frequency filtered RSAM.  
+The ffRSAM application allows users to view pregenerated RSAM plots for 1, 7, 30, or 365 days.  There is also an interface to allow for customized queries, including plots for frequency filtered RSAM.  
 <p>
 <p>
 <a href="ffrsam/plots.php?days=1">One (1) day plots</a><p>
+<a href="ffrsam/plots.php?days=7">Seven (7) day plots</a><p>
 <a href="ffrsam/plots.php?days=30">Thirty (30) day plots</a><p>
 <a href="ffrsam/plots.php?days=365">365 day plots</a><p>
 <a href="ffrsam/index.html">Customizable Queries</a><p>
